--- a/animation/2d_context_circle.html
+++ b/animation/2d_context_circle.html
@@ -10,7 +10,7 @@
 <canvas id="myCanvas">
 </canvas>
 
-<script src="js/jquery-3.6.0.min.js"></script>
+<script src="../js/jquery-3.6.0.min.js"></script>
 <script type="text/javascript">
     let getPixelRatio = function (context) {
         let backingStore = context.backingStorePixelRatio ||
