--- a/animation/2d_context_line_to.html
+++ b/animation/2d_context_line_to.html
@@ -10,7 +10,7 @@
 
     </canvas>
 
-    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript">
         $(function () {
             let canvas=$('#myCanvas');
