--- a/animation/3d_translate.html
+++ b/animation/3d_translate.html
@@ -7,7 +7,9 @@
         body{
             perspective: 800px;
             transform-style: preserve-3d;
-            background: #112200;
+
+
+            background: linear-gradient(to left,#123456,#876543);
         }
 
         .box{
